Prepare bitser for JEP 500
This JEP will forbid mutating final fields by default, so we need to deserialize objects with final fields differently.